// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="default_input"
      title="default"
    >
      default
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="ant-select {} ant-select-auto-complete ant-select-single ant-select-allow-clear ant-select-show-search"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <div
            className="ant-select-selector"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <span
              className="ant-select-selection-search"
            >
              <input
                aria-activedescendant="default_input_list_0"
                aria-autocomplete="list"
                aria-controls="default_input_list"
                aria-haspopup="listbox"
                aria-owns="default_input_list"
                autoComplete="off"
                className="ant-select-selection-search-input"
                id="default_input"
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onPaste={[Function]}
                readOnly={false}
                role="combobox"
                style={
                  Object {
                    "opacity": null,
                  }
                }
                type="search"
                unselectable={null}
                value=""
              />
            </span>
            <span
              className="ant-select-selection-placeholder"
            >
              Type or select item
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.options-string 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.options-string_input"
      title="properties.options-string"
    >
      properties.options-string
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="ant-select {} ant-select-auto-complete ant-select-single ant-select-allow-clear ant-select-show-search"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <div
            className="ant-select-selector"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <span
              className="ant-select-selection-search"
            >
              <input
                aria-activedescendant="properties.options-string_input_list_0"
                aria-autocomplete="list"
                aria-controls="properties.options-string_input_list"
                aria-haspopup="listbox"
                aria-owns="properties.options-string_input_list"
                autoComplete="off"
                className="ant-select-selection-search-input"
                id="properties.options-string_input"
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onPaste={[Function]}
                readOnly={false}
                role="combobox"
                style={
                  Object {
                    "opacity": null,
                  }
                }
                type="search"
                unselectable={null}
                value=""
              />
            </span>
            <span
              className="ant-select-selection-placeholder"
            >
              Type or select item
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.title 1`] = `
<div
  className="ant-row ant-form-item {\\"style\\":{}}"
  style={
    Object {
      "marginBottom": 0,
    }
  }
>
  <div
    className="ant-col ant-form-item-label ant-form-item-label-left ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <label
      className="{}"
      htmlFor="properties.title_input"
      title="Auto Complete Title"
    >
      Auto Complete Title
    </label>
  </div>
  <div
    className="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
    style={Object {}}
  >
    <div
      className="ant-form-item-control-input"
    >
      <div
        className="ant-form-item-control-input-content"
      >
        <div
          className="ant-select {} ant-select-auto-complete ant-select-single ant-select-allow-clear ant-select-show-search"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <div
            className="ant-select-selector"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <span
              className="ant-select-selection-search"
            >
              <input
                aria-activedescendant="properties.title_input_list_0"
                aria-autocomplete="list"
                aria-controls="properties.title_input_list"
                aria-haspopup="listbox"
                aria-owns="properties.title_input_list"
                autoComplete="off"
                className="ant-select-selection-search-input"
                id="properties.title_input"
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onPaste={[Function]}
                readOnly={false}
                role="combobox"
                style={
                  Object {
                    "opacity": null,
                  }
                }
                type="search"
                unselectable={null}
                value=""
              />
            </span>
            <span
              className="ant-select-selection-placeholder"
            >
              Type or select item
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.options-string 1`] = `true`;

exports[`Test Schema properties.options-string 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;
